Add courses stats csv export
